added comments to each specific bill page #6

--- a/client/singleBill/bill.html
+++ b/client/singleBill/bill.html
@@ -1,4 +1,15 @@
 <template name="bill">
+    <div id="fb-root"></div>
+    <script>
+        (function(d,s,id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=968320853209679";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script','facebook-jssdk'));
+    </script>
     <div class="ui grid">
 
         <div id="right-side" class="thirteen wide column">
@@ -56,4 +67,6 @@
 
         </div>
     </div>
+
+    <div class="fb-comments" data-href="{{getPath}}" data-numposts="5"></div>
 </template>
