--- a/client/singleBill/bill.html
+++ b/client/singleBill/bill.html
@@ -1,4 +1,5 @@
 <template name="bill">
+    <!-- BEGIN required code for Facebook Comments plugin -->
     <div id="fb-root"></div>
     <script>
         (function(d,s,id) {
@@ -10,6 +11,7 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script','facebook-jssdk'));
     </script>
+    <!-- END required code for Facebook Comments plugin -->
     <div class="ui grid">
 
         <div id="right-side" class="thirteen wide column">
@@ -68,5 +70,8 @@
         </div>
     </div>
 
+    <!-- BEGIN required code for Facebook Comments plugin -->
     <div class="fb-comments" data-href="{{getPath}}" data-numposts="5"></div>
+    <!-- END required code for Facebook Comments plugin -->
+
 </template>
