#6 corrected formatting of comments plugin

--- a/client/singleBill/bill.html
+++ b/client/singleBill/bill.html
@@ -59,6 +59,14 @@
                                     </p>
                                 </div>
                             </div>
+                            <div class="one column row">
+                                <div class="column">
+                                    <h2 class="ui medium header">Comments</h2>
+                                    <!-- BEGIN required code for Facebook Comments plugin -->
+                                    <div class="fb-comments" data-href="{{getPath}}" data-numposts="5"></div>
+                                    <!-- END required code for Facebook Comments plugin -->
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="column">
                                     <div class="ui divider"></div>
@@ -70,8 +78,6 @@
         </div>
     </div>
 
-    <!-- BEGIN required code for Facebook Comments plugin -->
-    <div class="fb-comments" data-href="{{getPath}}" data-numposts="5"></div>
-    <!-- END required code for Facebook Comments plugin -->
+
 
 </template>
