--- a/client/gCivic/gCivic.html
+++ b/client/gCivic/gCivic.html
@@ -1,25 +1,45 @@
 <template name="gCivic">
-    <div class="ui container" >
-        <h4 class="ui header">Civic Data: </h4>
+    <div id="rep-container" class="ui container fluid" >
+        <h1 class="ui header">Civic Data: </h1>
         {{#with data}}
-        <h2 class="ui segment header large">Showing Reps for {{normalizedInput.city}}, {{normalizedInput.state}} {{normalizedInput.zip}}</h2>
-        <div class="ui two cards">
+        <h2 class="ui segment centered header">Showing Reps for {{normalizedInput.city}}, {{normalizedInput.state}} {{normalizedInput.zip}}</h2>
+        <div id="rep-cards" class="ui cards">
+            
             {{#each offices}}
-                <div class="office-container card stackable">
-                    <div class="office-name content header">
-                        {{name}}
-                    </div>
-
-                {{#each officialIndices}}
-                    <div class="office-official-photo">
-                        <img class="ui small image" src="{{getOfficial 'photoUrl' data this}}" alt="{{getOfficial 'name' data this}}">
-                    </div>
-                    <div class="office-official-name content">
-                        {{getOfficial 'name' data this}}
-                    </div>
-                {{/each}}
-
+            <div class="office-card ui card container">
+                <div class="content">
+                    <h3 class="office-name centered header">
+                        Your {{name}}
+                    </h3>
                 </div>
+
+                <div id="rep-card-container" class="ui container special cards">
+                    {{#each officialIndices}}
+                    <div class="rep-card ui card">
+                        <div class="office-official-photo ui medium blurring dimmable image">
+                            <div class="ui dimmer">
+                                <div class="content">
+                                  <div class="center">
+                                    <div class="ui inverted button">Add Friend</div>
+                                  </div>
+                                </div>
+                            </div>
+                            {{#if getOfficial 'photoUrl' data this}}
+                                <img class="ui " src="{{getOfficial 'photoUrl' data this}}" alt="{{getOfficial 'name' data this}}" >
+                            {{else}}
+                                <img class="no-photo ui " src="/img/pholder.png">
+                            {{/if}}
+                        </div>
+                        <div class="content">
+                            <h3 class="office-official-name sub header">
+                                {{getOfficial 'name' data this}}
+                            </h3>
+                        </div>
+                    </div>
+                    {{/each}}
+                </div>
+
+            </div>
             {{/each}}
         </div>
         {{/with}}
