--- a/client/sponsoredBills/sponsoredBills.html
+++ b/client/sponsoredBills/sponsoredBills.html
@@ -1,8 +1,33 @@
-<template name="sponsoredBills">
-	<div class="ui">
-		<h4 class="ui subheader">Sponsored Bills: </h4>
+<template name="sponsoredBillz">
+	<div class="ui fluid container">
+		<h4 class="ui centered header">Sponsored Bills: </h4>
 		{{#each sponsored_bills}}
-				<li><a href="{{urls.congress}}" >{{bill_id}}</a>: {{official_title}}</li>
+		<div class="ui tiny list">
+			<div class="item">
+				<i class="legal icon"></i>
+				<div class="content">
+					<a class="header" href="{{urls.congress}}" >{{bill_id}}</a>
+					<div class="description"> {{official_title}} </div>
+				</div>
+			</div>
+		</div>
+		{{/each}}
+	</div>
+</template>
+
+<template name="sponsoredBills">
+	<div class="ui fluid container">
+		<h4 class="ui centered header">Sponsored Bills: </h4>
+		{{#each sponsored_bills}}
+		<div class="ui accordion">
+			<div class="title">
+				<i class="dropdown icon"></i>
+				<a class="header" href="{{urls.congress}}" >{{bill_id}}</a>
+			</div>
+			<div class="content">
+				<p class="transition hidden"> {{official_title}} </p>
+			</div>
+		</div>
 		{{/each}}
 	</div>
 </template>
