added sponsored bills list to wordcloud for null search. upon search, wordcloud changes to results. #10

--- a/client/wordCloud/wordCloud.html
+++ b/client/wordCloud/wordCloud.html
@@ -1,5 +1,5 @@
 <template name="wordCloud">
-	<div id="wcloud-container" class="ui {{hidden}} segment">
+	<div id="wcloud-container" class="ui {{loader}} segment">
 		<div id="wcloud" class="ui canvas">
 		</div>
 	</div>
