--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
 		<div id="content" class="ui thirteen wide column">
 			{{> elections}}
             {{> myReps}}
-			{{> pollster}}
+			{{! > pollster}}
 			{{> legiScanResults }}
 
 		</div>
