--- a/client/imports/ui/pages/mainMenu.html
+++ b/client/imports/ui/pages/mainMenu.html
@@ -1,5 +1,5 @@
 <template name="MainMenu">
-    <div class="ui fixed inverted menu">
+    <div class="ui fixed inverted material menu">
         <div class="ui container">
             <a href="/" class="header item">
                 <img class="logo" src="assets/images/logo.png">
