--- a/client/js/newsticker/newsticker.html
+++ b/client/js/newsticker/newsticker.html
@@ -15,7 +15,7 @@
             <!--{{/each}}-->
         <!--</ul>-->
     <!--</div>-->
-    <div class="breakingNews bn-bordernone bn-black" id="bn1">
+    <div class="breakingNews bn-bordernone bn-primary" id="bn1">
         <div class="bn-title" style="width: auto;"><h2 style="display: inline-block;">Bulletin</h2><span></span></div>
         <ul style="left: 138px;">
             {{#each newsItems}}
