trying to fix newZip entered to return gcivic and myreps results. fixed myreps but gcivic is over limit and can't test

--- a/client/imports/ui/pages/mainMenu.html
+++ b/client/imports/ui/pages/mainMenu.html
@@ -9,11 +9,11 @@
             <a class="item" href="/bills">Bills</a>
             <a class="item" href="/representatives">Representatives</a>
             <div class="ui simple dropdown item">
-                Public Opinion Polls <i class="dropdown icon"></i>
+                More.... <i class="dropdown icon"></i>
                 <div class="menu">
-                    <a class="item" href="#">Presidential Public Opinion</a>
-                    <a class="item" href="#">The 2015 Democratic Primary</a>
-                    <a class="item" href="#">Representatives</a>
+                    <a class="item" href="/public-opinion-polls">Presidential Public Opinion</a>
+                    <a class="item" href="/party">The 2016 Primaries</a>
+                    <a class="item" href="/voters">Voter Polls</a>
                 </div>
             </div>
         </div>
