added 'logo'; added upcoming elections and fundraiser info; styled all above

--- a/client/imports/ui/pages/mainMenu.html
+++ b/client/imports/ui/pages/mainMenu.html
@@ -1,9 +1,8 @@
 <template name="MainMenu">
-    <div class="ui fixed inverted material menu">
+    <div id="main-menu" class="ui fixed material menu">
         <div class="ui container">
             <a href="/" class="header item">
-                <img class="logo" src="assets/images/logo.png">
-                The Diligent Citizen
+                <img class="logo" src="img/tdc.jpg" >
             </a>
             <a href="/" class="item">Home</a>
             <a class="item" href="/bills">Bills</a>
@@ -12,8 +11,8 @@
                 More.... <i class="dropdown icon"></i>
                 <div class="menu">
                     <a class="item" href="/public-opinion-polls">Presidential Public Opinion</a>
-                    <a class="item" href="/party">The 2016 Primaries</a>
-                    <a class="item" href="/voters">Voter Polls</a>
+                    <a class="item" href="/party">Local Fundraising Events</a>
+                    <a class="item" href="/elections">Upcoming Elections</a>
                 </div>
             </div>
         </div>
