--- a/client/imports/ui/pages/index.html
+++ b/client/imports/ui/pages/index.html
@@ -20,7 +20,7 @@
 
 		</div>
 
-		<div id="content" class="ui thirteen wide column">
+		<div id="wrapper" class="ui thirteen wide column">
 			{{> elections}}
             {{> myReps}}
 			{{> pollster}}
