--- a/client/imports/ui/pages/mainMenu.html
+++ b/client/imports/ui/pages/mainMenu.html
@@ -2,7 +2,7 @@
     <div id="main-menu" class="ui fixed material menu">
         <div class="ui container">
             <a href="/" class="header item">
-                <img class="logo" src="img/tdc.jpg" >
+                <img class="logo" src="img/tdc.png" >
             </a>
             <a href="/" class="item">Home</a>
             <a class="item" href="/bills">Bills</a>
