changed reps menu back

--- a/client/imports/ui/pages/mainMenu.html
+++ b/client/imports/ui/pages/mainMenu.html
@@ -8,7 +8,7 @@
         <div class="ui container">
             <!-- <a class="header item" href="/"> Home </a> -->
             <a class="header item" href="/bills"> Search Laws </a>
-            <a class="header item" href="/representatives"> Sponsored Bills </a>
+            <a class="header item" href="/representatives"> Representatives </a>
             <div class="ui pointing dropdown item">
                 <a class="header item"> More.... </a>
                 <i class="dropdown icon"></i>
