styled login and signup section of header

--- a/client/imports/ui/pages/mainMenu.html
+++ b/client/imports/ui/pages/mainMenu.html
@@ -15,6 +15,9 @@
                     <a class="item" href="/elections">Upcoming Elections</a>
                 </div>
             </div>
+            <div class="item">
+            {{> register}}
+            </div>
         </div>
     </div>
 </template>
