reset houston admin, added material theme to menu, added _admin to houston collections

--- a/client/imports/ui/pages/mainMenu.html
+++ b/client/imports/ui/pages/mainMenu.html
@@ -1,5 +1,5 @@
 <template name="MainMenu">
-    <div id="main-menu" class="ui fixed material menu">
+    <div id="main-menu" class="ui fixed menu">
         <div class="ui container">
             <a href="/" class="header item">
                 <img class="logo" src="img/tdc.png" >
@@ -15,7 +15,7 @@
                     <a class="item" href="/elections">Upcoming Elections</a>
                 </div>
             </div>
-            <div class="item">
+            <div class=" item">
             {{> register}}
             </div>
         </div>
